Use Stream.toList method
Simpler code than collect(Collectors.toList())